@@ -9,6 +9,8 @@ Updated by: FPtje Falco
 [ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)
 [ADD] Cops chief and mayor only option in the Key menu for superadmins
 [ADD] A very easy way to add classes! see shared.lua!
+[ADD] rp_hungerspeed command: it's the speed of hunger divided by 10( standard = 7)
+[ADD] Admins can choose to make a vote or not to make a vote to become cop/mayor
 [CHANGE] All door controls are now done though reload with the Keys weapon.
 [CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
 [CHANGE] The way prop protection works for admins
@@ -19,6 +21,7 @@ Updated by: FPtje Falco
 [FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
 [FIX] Exploit with wire nailer
 [FIX] Exploit that you can duplicate weapons(I made sure that you can't use toolgun on weapons AND I made sure you can't spawn saved weapons works on both normal dup and adv. dup)
+[FIX] Bug that even if hungermod was off, food would still cost money.
 [REMOVE] Data/DarkRP/WHAT_YOU_CAN_DO_IN_THIS_FOLDER.txt and its contents, it had absolutely no purpose. If you have that file, the update won't remove it but it won't remake it either.
 
 
